# duplicate_searcher

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
application/: CMakeLists.txt  form.fbp
application/src/: app.cpp  app.h  duplicate_file_view_model.cpp  duplicate_file_view_model.h  hashkey.cpp  hashkey.h  mainform.cpp  mainform.h  searcher.cpp  searcher.h
application/src/app/: app.cpp  app.h
application/src/hashkey/: hashkey.cpp  hashkey.h
application/src/mainform/: mainform.cpp  mainform.h
application/src/searcher/: searcher.cpp  searcher.h
lsh/: CMakeLists.txt
lsh/include/lsh/: lsh.h  lsh_def.h
lsh/src/general/: lsh.c  lsh_local.h
lsh/src/include/: hmac.h
lsh/src/x86_64/: Makefile  cpu_info.h  cpu_info_ia32.c  lsh.c  lsh_local.h
lsh/src/x86_64/avx2/: lsh256_avx2.c  lsh256_avx2.h  lsh512_avx2.c  lsh512_avx2.h
lsh/src/x86_64/no_arch/: lsh256.c  lsh256.h  lsh512.c  lsh512.h
lsh/src/x86_64/sse2/: lsh256_sse2.c  lsh256_sse2.h  lsh512_sse2.c  lsh512_sse2.h
lsh/src/x86_64/ssse3/: lsh256_ssse3.c  lsh256_ssse3.h  lsh512_ssse3.c  lsh512_ssse3.h
lsh/src/x86_64/xop/: lsh256_xop.c  lsh256_xop.h  lsh512_xop.c  lsh512_xop.h
